--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "roboedu",
   "version": "0.1.0",
@@ -17,13 +16,15 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
+    "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "tailwindcss build src/styles.css -o public/styles.css"
   },
   "eslintConfig": {
     "extends": [
