--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "roboedu",
   "version": "0.1.0",
@@ -16,6 +15,7 @@
     "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
